HelloUltraviolet/Fixtures/RejectedSource/Statements/LetInferenceFailure/Source/Main.uv
//! Rejected statement specimen for let binding inference failure.

public procedure letInferenceFailureReference() -> i32 {
    let pointer = Ptr::null()
    return 0
}
